# bin-diff

./: CMakeLists.txt
include/: diff.hpp  patch.hpp  sequence_view.hpp
src/: main.cpp
